# ds-mcp

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: README.md  adding_table_servers.md  adding_tables.md  tutorial.md
scripts/: common_aws_setup.sh  explore_provider_combined_audit.py  explore_table.py  run_b6_today.py  run_b6_today.sh  run_market_anomalies.sh  run_mcp_server.sh  run_provider_combined_audit.sh  run_server.sh  run_table_template.sh  run_with_env.sh
src/ds_mcp/: __init__.py  server.py
src/ds_mcp/core/: __init__.py  connectors.py  registry.py
src/ds_mcp/servers/: __init__.py  base_server.py  market_anomalies_server.py  provider_combined_audit_server.py  table_server_template.py
src/ds_mcp/tables/: __init__.py  base.py
src/ds_mcp/tables/market_anomalies_v3/: __init__.py  config.py  tools.py
src/ds_mcp/tables/provider_combined_audit/: __init__.py  config.py  service.py  tools.py
tests/: __init__.py  test_imports.py  test_partition_guardrail.py  test_registry.py  test_table_safety.py  test_tools.py
tests/integration/: __init__.py  test_mcp_connection.py
